--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -410,6 +410,7 @@
    "outputs": [],
    "source": [
     "class Simulation:\n",
+    "    \n",
     "    '''\n",
     "    A simulation engine that simulate interaction between an environment and an agent, running a simulation\n",
     "    based on the agent's policy and the environment's dynamics.\n",
@@ -616,9 +617,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder 'Mindset_InitialState' created (or already exists) at: /Users/rezek_zhu/GrowthMindset/Mindset_InitialState\n",
+      "Malleability belief updated to 0.0 and model refreshed.\n",
+      "Malleability belief updated to 0.1 and model refreshed.\n",
+      "Malleability belief updated to 0.2 and model refreshed.\n",
+      "Malleability belief updated to 0.3 and model refreshed.\n",
+      "Malleability belief updated to 0.4 and model refreshed.\n",
+      "Malleability belief updated to 0.5 and model refreshed.\n",
+      "Malleability belief updated to 0.6 and model refreshed.\n",
+      "Malleability belief updated to 0.7 and model refreshed.\n",
+      "Malleability belief updated to 0.8 and model refreshed.\n",
+      "Malleability belief updated to 0.9 and model refreshed.\n",
+      "Malleability belief updated to 1.0 and model refreshed.\n"
+     ]
+    }
+   ],
    "source": [
     "# In a malleable environment\n",
     "env = Mindset_Environment(malleability=0.5,session_length=20) \n",
@@ -631,27 +651,6 @@
     "            agent.malleability_belief=mindset\n",
     "            agent.time_horizon=horizon\n",
     "            simulation.run_simulation(simulation_id = \"_\".join([str(mindset),s,str(horizon)]), initial_state = s,simulation_num = 50)\n",
-    "        #Variable\n",
-    "        # - mindset {0,.1,.2,....,.9,1.0}\n",
-    "        # - horizon:{5,10,20}\n",
-    "        # - state {1,2,3}\n",
-    "        #Static: \n",
-    "        # - env: session_length:20; malleability=0.7\n",
-    "        # - agent: time_horizon=session_length=50, discount_rate=0.9\n",
-    "        # - simulation: 50\n",
-    "        #Output\n",
-    "        # - results (path): action, state, reward\n",
-    "        # - expected_values\n",
-    "        # - simulation_info\n",
-    "\n",
-    "\n",
-    "\n",
-    "simulation = Simulation(env, agent,\"Mindset_InitialState_EV\")\n",
-    "for mindset in [i/10 for i in range(0,11)]:\n",
-    "    for horizon in [5,10,20]:\n",
-    "        agent.malleability_belief=mindset\n",
-    "        agent.time_horizon=horizon\n",
-    "        simulation.run_simulation(simulation_id = \"_\".join([str(mindset),str(horizon)]), initial_state = \"s1\",simulation_num = 50)\n",
     "        #Variable\n",
     "        # - mindset {0,.1,.2,....,.9,1.0}\n",
     "        # - horizon:{5,10,20}\n",
