--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,35 @@
     "import os\n",
     "import csv\n",
     "\n",
-    "__demo=False"
+    "__demo=True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reward table: \n",
+      "[[10  5  2]\n",
+      " [ 8  6  1]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "transition probability table: \n",
+      "[[[0.8 0.2 0. ]\n",
+      "  [0.1 0.9 0. ]\n",
+      "  [0.  0.1 0.9]]\n",
+      "\n",
+      " [[0.7 0.3 0. ]\n",
+      "  [0.2 0.7 0.1]\n",
+      "  [0.  0.3 0.7]]]\n",
+      "Reward for taking action 'a1' in 's1' : 5\n",
+      "Probability of transitioning from 's1' to 's2' through action 'a1': 0.2\n"
+     ]
+    }
+   ],
    "source": [
     "class MDP_Environment:\n",
     "    '''\n",
@@ -95,9 +116,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward Table:\n",
+      " [[1 2 3]\n",
+      " [2 2 2]]\n",
+      "Transition Table for dependent action:\n",
+      " [[[0. 1. 0.]\n",
+      "  [0. 0. 1.]\n",
+      "  [0. 0. 1.]]]\n",
+      "Transition Table for independent action:\n",
+      " [[[1. 0. 0.]\n",
+      "  [0. 1. 0.]\n",
+      "  [0. 0. 1.]]]\n",
+      "Internal model:\n",
+      "states:\n",
+      " ['s1' 's2' 's3'] \n",
+      "actions:\n",
+      " ['A_dependent' 'A_independent'] \n",
+      "reward_table:\n",
+      " [[1 2 3]\n",
+      " [2 2 2]] \n",
+      "transition_table:\n",
+      " [[[0.8 0.2 0. ]\n",
+      "  [0.  0.8 0.2]\n",
+      "  [0.  0.  1. ]]\n",
+      "\n",
+      " [[1.  0.  0. ]\n",
+      "  [0.  1.  0. ]\n",
+      "  [0.  0.  1. ]]]\n",
+      "Parameters of environment:\n",
+      "{'state_num': 3, 'reward_baseline': 2, 'reward_increment': 1, 'malleability': 1, 'session_length': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "class Mindset_Environment(MDP_Environment):\n",
     "    '''\n",
@@ -194,9 +251,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal policy:\n",
+      " [[(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0, 1), (0,)]]\n",
+      "\n",
+      "Expected values list:\n",
+      " [[[16.36370189 18.4407457  19.5396468 ]\n",
+      "  [15.6812966  17.55063581 18.5396468 ]]\n",
+      "\n",
+      " [[15.20144067 17.27848423 18.37738533]\n",
+      "  [14.51903756 16.38837435 17.37738533]]\n",
+      "\n",
+      " [[13.91004173 15.98708261 17.0859837 ]\n",
+      "  [13.22766248 15.09697276 16.0859837 ]]\n",
+      "\n",
+      " [[12.47518053 14.55219195 15.651093  ]\n",
+      "  [11.79306246 13.66208254 14.651093  ]]\n",
+      "\n",
+      " [[10.88118051 12.95786949 14.05677   ]\n",
+      "  [10.20192142 12.06776485 13.05677   ]]\n",
+      "\n",
+      " [[ 9.11324602 11.18640539 12.2853    ]\n",
+      "  [ 8.4652751  10.2963539  11.2853    ]]\n",
+      "\n",
+      " [[ 7.183639    9.218171   10.317     ]\n",
+      "  [ 6.878       8.32871     9.317     ]]\n",
+      "\n",
+      " [[ 5.0761      7.0319      8.13      ]\n",
+      "  [ 5.42        6.149       7.13      ]]\n",
+      "\n",
+      " [[ 2.8         4.61        5.7       ]\n",
+      "  [ 3.8         3.8         4.7       ]]\n",
+      "\n",
+      " [[ 1.          2.          3.        ]\n",
+      "  [ 2.          2.          2.        ]]]\n"
+     ]
+    }
+   ],
    "source": [
     "class DP_Agent:\n",
     "    '''\n",
@@ -317,9 +414,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Environment transition:\n",
+      "[[[0.3 0.7 0. ]\n",
+      "  [0.  0.3 0.7]\n",
+      "  [0.  0.  1. ]]\n",
+      "\n",
+      " [[1.  0.  0. ]\n",
+      "  [0.  1.  0. ]\n",
+      "  [0.  0.  1. ]]]\n",
+      "Fixed mindset:\n",
+      "FM agent belief transition:\n",
+      "[[[0.9 0.1 0. ]\n",
+      "  [0.  0.9 0.1]\n",
+      "  [0.  0.  1. ]]\n",
+      "\n",
+      " [[1.  0.  0. ]\n",
+      "  [0.  1.  0. ]\n",
+      "  [0.  0.  1. ]]]\n",
+      "Expected values:\n",
+      " [[[12.17516601 14.91636603 19.5396468 ]\n",
+      "  [13.0264312  14.51377928 18.5396468 ]]\n",
+      "\n",
+      " [[11.37826016 13.9041992  18.37738533]\n",
+      "  [12.25159022 13.51828963 17.37738533]]\n",
+      "\n",
+      " [[10.49486813 12.79809959 17.0859837 ]\n",
+      "  [11.3906558  12.43277913 16.0859837 ]]\n",
+      "\n",
+      " [[ 9.5158633  11.59197681 15.651093  ]\n",
+      "  [10.434062   11.25207501 14.651093  ]]\n",
+      "\n",
+      " [[ 8.43121826 10.28008335 14.05677   ]\n",
+      "  [ 9.37118     9.97156261 13.05677   ]]\n",
+      "\n",
+      " [[ 7.22993131  8.85729179 12.2853    ]\n",
+      "  [ 8.1902      8.5875131  11.2853    ]]\n",
+      "\n",
+      " [[ 5.899951    7.319459   10.317     ]\n",
+      "  [ 6.878       7.09751     9.317     ]]\n",
+      "\n",
+      " [[ 4.4281      5.6639      8.13      ]\n",
+      "  [ 5.42        5.501       7.13      ]]\n",
+      "\n",
+      " [[ 2.8         3.89        5.7       ]\n",
+      "  [ 3.8         3.8         4.7       ]]\n",
+      "\n",
+      " [[ 1.          2.          3.        ]\n",
+      "  [ 2.          2.          2.        ]]]\n",
+      "Optimal policy:\n",
+      " [[(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0, 1), (0,)]]\n",
+      "Growth mindset:\n",
+      "Malleability belief updated to 0.9 and model refreshed.\n",
+      "GM agent belief transition:\n",
+      "[[[0.1 0.9 0. ]\n",
+      "  [0.  0.1 0.9]\n",
+      "  [0.  0.  1. ]]\n",
+      "\n",
+      " [[1.  0.  0. ]\n",
+      "  [0.  1.  0. ]\n",
+      "  [0.  0.  1. ]]]\n",
+      "Expected values:\n",
+      " [[[16.36370189 18.4407457  19.5396468 ]\n",
+      "  [15.6812966  17.55063581 18.5396468 ]]\n",
+      "\n",
+      " [[15.20144067 17.27848423 18.37738533]\n",
+      "  [14.51903756 16.38837435 17.37738533]]\n",
+      "\n",
+      " [[13.91004173 15.98708261 17.0859837 ]\n",
+      "  [13.22766248 15.09697276 16.0859837 ]]\n",
+      "\n",
+      " [[12.47518053 14.55219195 15.651093  ]\n",
+      "  [11.79306246 13.66208254 14.651093  ]]\n",
+      "\n",
+      " [[10.88118051 12.95786949 14.05677   ]\n",
+      "  [10.20192142 12.06776485 13.05677   ]]\n",
+      "\n",
+      " [[ 9.11324602 11.18640539 12.2853    ]\n",
+      "  [ 8.4652751  10.2963539  11.2853    ]]\n",
+      "\n",
+      " [[ 7.183639    9.218171   10.317     ]\n",
+      "  [ 6.878       8.32871     9.317     ]]\n",
+      "\n",
+      " [[ 5.0761      7.0319      8.13      ]\n",
+      "  [ 5.42        6.149       7.13      ]]\n",
+      "\n",
+      " [[ 2.8         4.61        5.7       ]\n",
+      "  [ 3.8         3.8         4.7       ]]\n",
+      "\n",
+      " [[ 1.          2.          3.        ]\n",
+      "  [ 2.          2.          2.        ]]]\n",
+      "Optimal policy:\n",
+      " [[(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(0,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0,), (0,)], [(1,), (0, 1), (0,)]]\n"
+     ]
+    }
+   ],
    "source": [
     "class Mindset_Agent(DP_Agent):\n",
     "    '''\n",
@@ -405,9 +600,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder 'Sep_16_pre' created (or already exists) at: /Users/rezek_zhu/GrowthMindset/Sep_16_pre\n",
+      "state path:\n",
+      " ['s1', 's1', 's1', 's1', 's1', 's1', 's1', 's1', 's1', 's1']\n",
+      "action path:\n",
+      " ['A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent', 'A_independent']\n",
+      "reward path:\n",
+      " [2 2 2 2 2 2 2 2 2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "class Simulation:\n",
     "    \n",
@@ -617,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
